--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             </div>
             <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
         </div>
+        <div id="spinner" class="text-center mt-5 d-none">
+            <div class="spinner-border text-danger" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
         <section class="images">
             <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
                 <h3 class="head-title text-center">Select image for create slider</h3>
